--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,16 @@
-nav ul {
-  display: flex;
-  flex-direction: row;
-  align-items: space-between;
-  justify-content: center;
-  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  }
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -12,11 +19,64 @@ nav ul {
   }
 }
 
-@keyframes App-logo-spin {
+header {
+  background-color: #133c55;
+  min-height: 30vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: row;
+}
+
+.profileInfo {
+  background-color: #34a0a4;
+}
+
+.comment-container {
+  background-color: #d0f4de;
+}
+/* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+} */
+@media screen and (max-width: 992px) {
+  header {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  header {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 412px) {
+  header {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  nav ul {
+    display: flex; 
+    font-size: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    margin: auto;
+  }
+  li {
+    padding-left: 5px;
+    margin: 0 auto 0 auto;
   }
 }
