--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,24 +4,38 @@
   box-sizing: border-box;
   }
 
-.App {
-  text-align: center;
+.sideBar {
+  height: 100%;
+  width: 160px;
+  top: 33.35vh;
+  left: 0;
+  background: #34a0a4;
+  overflow-x: hidden;
+  padding: 20px 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+div.col-sm-9 {
+  padding:0px;
+  margin: 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+div.col {
+  padding:0;
+  margin: 0;
 }
 
 header {
   background-color: #133c55;
   min-height: 30vh;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+.footer {
+  background-color: #133c55;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -35,13 +49,11 @@ header {
   flex-direction: row;
 }
 
-.profileInfo {
-  background-color: #34a0a4;
-}
-
-.comment-container {
+.homeContainer {
   background-color: #d0f4de;
 }
+
+
 /* @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
