--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,14 +4,61 @@
   box-sizing: border-box;
   }
 
+/* header and nav bar */
+header {
+  background-color: #133c55;
+  min-height: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  margin-bottom: 0px;
+}
+
+.menu-item {
+  display: flex;
+  flex-direction: row;
+}
+
+
+ul.menu {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+li.menu-item {
+  padding: 7px;
+}
+
+nav {
+  padding-bottom: 0px;
+  margin-bottom: 0px;
+}
+
+nav  li {
+  cursor: pointer;
+}
+
+/* home page, left profile, center comments & footer */
+.homeContainer {
+  background-color: #d0f4de;
+}
 .sideBar {
   height: 100%;
   width: auto;
   top: 33.35vh;
   left: 0;
-  background: #34a0a4;
+  background:linear-gradient(#133c55, #34a0a4 ,#133c55);
   overflow-x: hidden;
   padding: 20px 20px;
+  color: #fff;
+}
+.responseForm {
+float: right;
 }
 
 div.col-sm-9 {
@@ -21,20 +68,10 @@ div.col-sm-9 {
 
 div.col {
   padding: 0px;
-  margin: 10px;
-  border: 1px solid #fff;
+  margin: 0px;
+  /* border: 1px solid #fff; */
 }
 
-header {
-  background-color: #133c55;
-  min-height: 30vh;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 .footer {
   background-color: #133c55;
   display: flex;
@@ -43,38 +80,47 @@ header {
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  position: sticky;
+  position: relative;
 }
 
-.menu-item {
-  display: flex;
-  flex-direction: row;
-}
-
-.homeContainer {
-  background-color: #d0f4de;
-}
+/*  steam page */
 .steamContainer {
-  background-color: #133c55;
+  background-color: #233038;
+  padding: 30px;
 }
 
 .steamInfo {
-  border: 1px solid #133c55;
-  padding: 10px;
-  margin: 30px;
+  border: 1px solid #233038;
+  padding: auto;
+  margin: auto;
+  width: 60%;
   text-align: center;
 }
 
+.steamIcon {
+  text-align: center;
+  color: white;
+}
+
+/* epic page */
+.epicContainer {
+  background-color: #4e5c64;
+  padding: 30px;
+}
+
 .epicInfo {
-  border: 1px solid #133c55;
-  padding: 10px;
-  margin: 10px;
+  border: 1px solid #233038;
+  padding: auto;
+  margin: auto;
+  width: 60%;
   text-align: center;
 }
+
+/* discord or other page */
 .discordInfo {
   border: 1px solid #133c55;
   padding: 10px;
-  margin: 10px;
+  margin: auto;
   text-align: center;
 }
 
