--- a/client/src/App.css
+++ b/client/src/App.css
@@ -81,7 +81,7 @@ div.col {
 }
 
 .footer {
-  background-color: #133c55;
+  background-color: #005582;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -140,8 +140,18 @@ div.col {
   padding: 100px;
   width: 100%;
   height: 100%;
-  outline: dashed 1px black;
+border-radius: 10px;
   background-color: #00c2c7;
+  box-shadow: 0px 0px 50px 10px #daf8e3;
+}
+
+div.container {
+  /* background-color: #929ca1; */
+  background: linear-gradient(#005582,#00c2c7,#005582);
+  padding: 80px;
+}
+div.homeBody {
+  background: linear-gradient(#005582,#0086ad,#005582);
 }
 
 .loginCard {
@@ -161,6 +171,7 @@ h4.card-header {
 
 div.card-body {
   background-color: #daf8e3;
+  
 }
 
 .subButton {
@@ -177,6 +188,8 @@ input#email.form-input {
 input {
   border-radius: 10px;
 }
+
+/* profile page */
 
 @media screen and (max-width: 992px) {
   header {
