--- a/client/src/App.css
+++ b/client/src/App.css
@@ -55,16 +55,11 @@ nav li {
 .homeContainer {
   background-color: #d0f4de;
 }
-.sideBar {
-  height: 100%;
-  width: auto;
-  top: 33.35vh;
-  left: 0;
-  background: linear-gradient(#133c55, #34a0a4, #133c55);
-  overflow-x: hidden;
-  padding: 20px 20px;
-  color: #fff;
+
+.commentContainer {
+  
 }
+
 .responseForm {
   float: right;
 }
@@ -77,7 +72,6 @@ div.col-sm-9 {
 div.col {
   padding: 0px;
   margin: 0px;
-  /* border: 1px solid #fff; */
 }
 
 .footer {
@@ -93,43 +87,29 @@ div.col {
 
 /*  steam page */
 .steamContainer {
-  background-color: #233038;
   padding: 30px;
 }
 
-.steamInfo {
-  border: 1px solid #233038;
-  padding: auto;
+div.card.steamInfo {
+  border: 3px solid white;
+  box-shadow: 0 0 20px 10px rgb(235, 231, 231);
   margin: auto;
   width: 60%;
   text-align: center;
+}
+
+div.card-body.steamBody {
+  background-color: #4e5c64;
+  color: #fff;
+}
+div.card-header.steamHeader {
+  background-color: #4e5c64;
+  color: #fff;
 }
 
 .steamIcon {
   text-align: center;
-  color: white;
-}
-
-/* epic page */
-.epicContainer {
-  background-color: #4e5c64;
-  padding: 30px;
-}
-
-.epicInfo {
-  border: 1px solid #233038;
-  padding: auto;
-  margin: auto;
-  width: 60%;
-  text-align: center;
-}
-
-/* discord or other page */
-.discordInfo {
-  border: 1px solid #133c55;
-  padding: 10px;
-  margin: auto;
-  text-align: center;
+  padding: 20px;
 }
 
 /* login page */
@@ -140,18 +120,17 @@ div.col {
   padding: 100px;
   width: 100%;
   height: 100%;
-border-radius: 10px;
+  border-radius: 10px;
   background-color: #00c2c7;
   box-shadow: 0px 0px 50px 10px #daf8e3;
 }
 
 div.container {
-  /* background-color: #929ca1; */
-  background: linear-gradient(#005582,#00c2c7,#005582);
+  background: linear-gradient(#005582, #00c2c7, #005582);
   padding: 80px;
 }
 div.homeBody {
-  background: linear-gradient(#005582,#0086ad,#005582);
+  background: linear-gradient(#005582, #0086ad, #005582);
 }
 
 .loginCard {
@@ -167,11 +146,11 @@ div.homeBody {
 
 h4.card-header {
   background: linear-gradient(#0086ad, #daf8e3);
+  border-bottom: none;
 }
 
 div.card-body {
   background-color: #daf8e3;
-  
 }
 
 .subButton {
@@ -190,6 +169,8 @@ input {
 }
 
 /* profile page */
+
+/* steam page */
 
 @media screen and (max-width: 992px) {
   header {
