--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,6 +52,7 @@ nav li {
 }
 
 /* home page */
+
 .homeContainer {
   background-color: #d0f4de;
 }
@@ -83,7 +84,6 @@ div.col {
 
 .commentFriendContainer {
   display: flex;
-  flex: 1;
   justify-content: space-evenly;
 }
 .friendList {
@@ -101,7 +101,7 @@ div.col {
 }
 
 form {
-padding-left: 18%;
+  padding-left: 18%;
 }
 
 textarea {
@@ -163,7 +163,7 @@ div.container {
     rgba(0, 85, 130, 0.9)
   );
   padding-top: 10px;
-  margin: 10px;
+  margin: auto;
 }
 div.homeBody {
   background-image: url(../public/blue-games-retro-plain-820x532.jpg);
@@ -217,29 +217,44 @@ input {
     width: 100%;
     margin: 0 auto;
   }
+  main {
+    margin: 80%;
+  }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
   header {
     width: 100%;
+  }
+  input {
+    width: 100%;
+    margin: 0 auto;
+  }
+
+  div.mid-12 {
+    height: 100%;
+    width: 100%;
+  }
+  .cfc {
+    height: 100%;
+    width: 47%;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .friendList {
+    width: 70% !important;
   }
 }
 @media screen and (max-width: 412px) {
   header {
     width: 100%;
-    flex-direction: column;
-  }
-
-  nav ul {
-    display: flex;
-    font-size: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    flex-wrap: nowrap;
+    padding: 0;
     margin: auto;
   }
-  li {
-    padding-left: 5px;
-    margin: 0 auto 0 auto;
+  .commentFriendContainer {
+    display: flex;
+    justify-content: space-evenly;
   }
 }
